[package]
name = "isohexen"
version = "0.3.4"
authors = ["Matthew Miller <mattdm@mattdm.org>"]
publish = false
repository = "https://github.com/mattdm/isohexen"
readme = "README.md"
keywords = ["isometric", "hex-tiles", "simple"]
categories = ["game-engines"]
license= "GPL-3.0"

[dependencies]
rand = "0.3"
toml = "0.4"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["image"]
